{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 313,
  "lineage": "ef345b2c-8a1c-17fa-64a1-15339f551ba8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e2d756e7d78558d",
            "arn": "arn:aws:ec2:eu-west-1:498142139943:instance/i-047ad81af12dc8b90",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-047ad81af12dc8b90",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "OB1west1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-084e9a4c0f7544899",
            "private_dns": "ip-10-0-1-10.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_ip": "52.211.47.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05134da54dc61664e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f87c2ef3c3413148"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3c6d53ce7b0eb03",
            "tags": {
              "Name": "OB1-ApacheServer-West1"
            },
            "tags_all": {
              "Name": "OB1-ApacheServer-West1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f87c2ef3c3413148"
            ]
          },
          "dependencies": [
            "aws_security_group.f5",
            "data.template_file.user_data",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "f5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:498142139943:security-group/sg-0f87c2ef3c3413148",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f87c2ef3c3413148",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "OB1-f5",
            "name_prefix": "",
            "owner_id": "498142139943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ob1-SecurityGroup1"
            },
            "tags_all": {
              "Name": "ob1-SecurityGroup1"
            },
            "timeouts": null,
            "vpc_id": "vpc-038d594f1cf962f1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e9ac603e934b253",
            "domain": "vpc",
            "id": "eipalloc-03e9ac603e934b253",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-63-33-125-153.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.33.125.153",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-eu-west-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:498142139943:internet-gateway/igw-024b0cbd35370f464",
            "id": "igw-024b0cbd35370f464",
            "owner_id": "498142139943",
            "tags": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-038d594f1cf962f1a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e9ac603e934b253",
            "connectivity_type": "public",
            "id": "nat-018036665ba7de677",
            "network_interface_id": "eni-0d5a585dacaf09be7",
            "private_ip": "10.0.1.207",
            "public_ip": "63.33.125.153",
            "subnet_id": "subnet-0d3c6d53ce7b0eb03",
            "tags": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-eu-west-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06b7c270284216af71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-018036665ba7de677",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06b7c270284216af7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-024b0cbd35370f464",
            "id": "r-rtb-0fdcb3bca91c44e4e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fdcb3bca91c44e4e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:498142139943:route-table/rtb-06b7c270284216af7",
            "id": "rtb-06b7c270284216af7",
            "owner_id": "498142139943",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-038d594f1cf962f1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:498142139943:route-table/rtb-0fdcb3bca91c44e4e",
            "id": "rtb-0fdcb3bca91c44e4e",
            "owner_id": "498142139943",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-038d594f1cf962f1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02584ac548f092bf3",
            "route_table_id": "rtb-06b7c270284216af7",
            "subnet_id": "subnet-0bc67f5d8c1c47f4d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023ba36317e072bc9",
            "route_table_id": "rtb-0fdcb3bca91c44e4e",
            "subnet_id": "subnet-0d3c6d53ce7b0eb03"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:498142139943:subnet/subnet-0bc67f5d8c1c47f4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc67f5d8c1c47f4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "498142139943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-038d594f1cf962f1a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:498142139943:subnet/subnet-0d3c6d53ce7b0eb03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3c6d53ce7b0eb03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498142139943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-public-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc-public-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-038d594f1cf962f1a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:498142139943:vpc/vpc-038d594f1cf962f1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08b5cb2bde58c3eb0",
            "default_route_table_id": "rtb-0c92ef7d8af2551f0",
            "default_security_group_id": "sg-0cccbf05cdae16436",
            "dhcp_options_id": "dopt-0e105c08e52698969",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-038d594f1cf962f1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c92ef7d8af2551f0",
            "owner_id": "498142139943",
            "tags": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "ob1-vpc-teraform",
              "Name": "OB1-f5-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}